<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/location_side"
    android:layout_height="@dimen/location_side"
    android:layout_gravity="center"
    android:background="@drawable/destination">


    <TextView
        android:id="@+id/locationDialogTitle"
        android:layout_width="@dimen/location_text_width"
        android:layout_height="@dimen/location_text_height"
        android:paddingTop="@dimen/location_text_padding"
        android:layout_marginStart="@dimen/location_text_marginStart"
        android:text="Midgard"
        android:textSize="@dimen/location_text"
        android:textColor="@android:color/white"
        android:background="@color/transparent"/>


    <RelativeLayout
        android:layout_width="@dimen/location_inner_width"
        android:layout_height="@dimen/location_inner_height"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:paddingEnd="@dimen/location_inner_padding"
        android:paddingBottom="@dimen/location_inner_padding">

        <ImageView
            android:id="@+id/locationImage"
            android:layout_width="@dimen/location_img_width"
            android:layout_height="@dimen/location_img_height"
            android:src="@drawable/card_back"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/dropCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DropCard"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@+id/locationImage"
            android:layout_toEndOf="@+id/locationImage" />

        <Button
            android:id="@+id/locationDialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_below="@+id/dropCard"
            android:layout_alignStart="@+id/dropCard"
            android:layout_alignEnd="@+id/dropCard" />

    </RelativeLayout>


    <Button
        android:id="@+id/locationGo"
        android:layout_width="@dimen/location_btn_go"
        android:layout_height="@dimen/location_btn_go"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/location_btn_margin"
        android:layout_marginEnd="@dimen/location_btn_margin"
        android:background="@color/btn_test"
        android:text="@string/Go"
        android:textColor="#FFF"
        />


</RelativeLayout>