<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_registerpage">

    <LinearLayout
        android:layout_width="@dimen/content_outerwidth"
        android:layout_height="@dimen/content_height"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/registerButton"
            android:layout_width="@dimen/btn_side"
            android:layout_height="@dimen/btn_side"
            android:background="@color/transparent"
            android:text="t_r"
            android:layout_gravity="center_vertical"/>

        <RelativeLayout
            android:layout_width="@dimen/content_innerwidth"
            android:layout_height="@dimen/content_height"
            android:gravity="center"
            android:paddingStart="@dimen/register_padding_left"
            android:paddingEnd="@dimen/register_padding_right">

            <TextView
                android:id="@+id/usernameRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="@dimen/label_text"
                android:textColor="@color/clr_register_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:padding="@dimen/login_text_padding"/>

            <TextView
                android:id="@+id/passwordRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/label_text"
                android:textColor="@color/clr_register_text"
                android:layout_below="@+id/usernameRegister"
                android:padding="@dimen/login_text_padding"/>

            <TextView
                android:id="@+id/passwordRegisterConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textSize="@dimen/label_text"
                android:textColor="@color/clr_register_text"
                android:layout_below="@+id/passwordRegister"
                android:padding="@dimen/login_text_padding"/>


            <EditText
                android:id="@+id/usernameRegisterText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/usernameRegister"
                android:layout_alignBaseline="@id/usernameRegister"
                android:padding="@dimen/register_text_padding"
                android:textColorHint="#ffffffff"
                android:textColor="@android:color/black"
                android:backgroundTint="@android:color/white"
                android:background="@drawable/edittext"
                android:maxLines="1"
                android:imeOptions="flagNoExtractUi|actionNext"/>

            <EditText
                android:id="@+id/passwordRegisterText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/passwordRegister"
                android:layout_alignBaseline="@id/passwordRegister"
                android:layout_alignStart="@+id/usernameRegisterText"
                android:padding="@dimen/register_text_padding"
                android:textColorHint="#ffffffff"
                android:textColor="@android:color/black"
                android:backgroundTint="@android:color/white"
                android:background="@drawable/edittext"
                android:maxLines="1"
                android:imeOptions="flagNoExtractUi|actionNext"/>

            <EditText
                android:id="@+id/passwordConfirmText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/passwordRegisterConfirm"
                android:layout_alignBaseline="@+id/passwordRegisterConfirm"
                android:layout_alignStart="@+id/usernameRegisterText"
                android:padding="@dimen/register_text_padding"
                android:textColorHint="#ffffffff"
                android:textColor="@android:color/black"
                android:backgroundTint="@android:color/white"
                android:background="@drawable/edittext"
                android:maxLines="1"
                android:imeOptions="flagNoExtractUi"/>

        </RelativeLayout>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="@dimen/btn_side"
            android:layout_height="@dimen/btn_side"
            android:background="@color/transparent"
            android:text="t_c"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

</RelativeLayout>